# ChemIC

./: .gitignore  README.md  chemic_train_eval.py  client.py  pyproject.toml  requirements.txt  setup.py
Benchmark/1000_images/: EP-0000002-A1_imga0001.tif  EP-0000002-A1_imgb0007.tif  EP-0000002-A1_imgb0023.tif  EP-0000002-B1_imgb0006.tif  EP-0000002-B1_imgb0020.tif  EP-0000002-B1_imgb0037.tif  EP-0000002-B1_imgb0046.tif  EP-0000009-B1_imgb0002.tif  EP-0000012-B1_imgf0001.tif  EP-0000014-A1_imgb0003.tif  EP-0000014-A1_imgb0013.tif  EP-0000014-A1_imgb0024.tif  EP-0000017-A1_imgb0020.tif  EP-0000017-A1_imgb0026.tif  EP-0000017-A1_imgb0029.tif  EP-0000017-A1_imgb0033.tif  EP-0000017-A1_imgb0035.tif  EP-0000017-B1_imgb0033.tif  EP-0000018-A1_imga0001.tif  EP-0000018-B1_imgb0002.tif  EP-0000018-B1_imgb0009.tif  EP-0000019-A1_imgb0008.tif  EP-0000023-A1_srep0001.tif  EP-0000024-A1_imgb0028.tif  EP-0000024-A1_imgb0049.tif  EP-0000024-A1_imgb0143.tif  EP-0000029-A1_imgb0002.tif  EP-0000030-A1_imgb0188.tif  EP-0000032-A1_imgb0026.tif  EP-0000033-A2_imgf0001.tif  EP-0000034-A1_imgb0010.tif  EP-0000034-B1_imgb0006.tif  EP-0000035-A1_imgb0018.tif  EP-0000036-B1_imgb0015.tif  EP-0000038-A1_imgb0006.tif  EP-0000038-A1_imgf0002.tif  (+678 more)
ChemIC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chemic/: __init__.py  app.py  config.py  image_classifier.py  loading_images.py
models/: chemical_image_classifier_resnet50_hand_drawn_like.txt  chemical_image_classifier_resnet50_hand_drawn_like_2024-02-27T10:20:42.txt
notebooks/: client.py  client_image_classifier.ipynb
(+37 files in other folders)
